<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/weekly_row_spacing"
    app:cardCornerRadius="@dimen/weekly_trend_top_spacing"
    app:cardElevation="@dimen/weekly_small_icon_padding"
    android:backgroundTint="@color/theme_surface_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/weekly_trend_top_spacing"
        android:background="@color/theme_surface_card">

        <!-- ========== MONTH NAVIGATION ========== -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/weekly_trend_top_spacing">

            <!-- Previous Month Button -->
            <ImageView
                android:id="@+id/btnPrevMonth"
                android:layout_width="@dimen/auto_dp_34"
                android:layout_height="@dimen/auto_dp_34"
                app:tint="@color/weekly_overview_text_primary"
                android:src="@drawable/chevron_left"
                android:contentDescription="@string/auto_previous_month"
                android:scaleType="centerInside" />

            <!-- Month and Year Display -->
            <TextView
                android:id="@+id/txtMonthYear"
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_may_2026"
                android:textSize="@dimen/weekly_body_text_size"
                android:textStyle="bold"
                android:textColor="@color/weekly_overview_text_primary"
                android:gravity="center"
                android:layout_marginStart="@dimen/weekly_title_spacing_small"
                android:layout_marginEnd="@dimen/weekly_title_spacing_small" />

            <!-- Next Month Button -->
            <ImageView
                android:id="@+id/btnNextMonth"
                android:layout_width="@dimen/auto_dp_34"
                android:layout_height="@dimen/auto_dp_34"
                app:tint="@color/weekly_overview_text_primary"
                android:src="@drawable/chevron_right"
                android:contentDescription="@string/auto_next_month"
                android:scaleType="centerInside" />
        </LinearLayout>

        <!-- ========== DAYS OF WEEK HEADER ========== -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/weekly_title_spacing_small">

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_sun"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding"/>

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_mon"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding" />

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_tue"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding" />

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_wed"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding" />

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_thu"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding" />

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_fri"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding"/>

            <TextView
                android:layout_width="@dimen/auto_dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_sat"
                android:textSize="@dimen/auto_sp_12"
                android:textColor="@color/weekly_overview_text_secondary"
                android:gravity="center"
                android:paddingVertical="@dimen/weekly_small_icon_padding"/>
        </LinearLayout>

        <!-- ========== CALENDAR DAYS GRID (RecyclerView) ========== -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCalendarDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7" />

    </LinearLayout>

</androidx.cardview.widget.CardView>



